# gallery-dl-server

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  MANIFEST.in  README.md  SECURITY.md  config.py  docker-compose.yaml  download.py  gallery-dl-server.py  gallery-dl.conf  output.py  pyproject.toml  requirements.txt  start.sh  yt-dlp.conf
.github/: dependabot.yaml
.github/workflows/: README.md  dependabot-auto-merge.yaml  docker-build-push-simple.yml  docker-build-push.yml  docker-image.yaml
docs/: config.toml  config.yaml  docker-compose.yaml  gallery-dl.conf
gallery_dl_server/: __init__.py  __main__.py  app.py  config.py  download.py  gallery-dl.conf  options.py  output.py  server.py  utils.py  version.py
gallery_dl_server/static/css/: index-dark.css  index.css  logs.css  styles.css
gallery_dl_server/static/js/: index.js  logs.js
gallery_dl_server/static/scripts/: index.js  logs.js
gallery_dl_server/static/styles/: index-dark.css  index.css  logs.css
gallery_dl_server/templates/: index.html  logs.html
templates/: index.html  logs.html
