[build-system]
requires = ["setuptools>=75.6.0", "wheel>=0.45.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gallery-dl-server"
version = "0.8.1"
requires-python = ">=3.10"
description = "Web UI for downloading media with gallery-dl and yt-dlp."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "qx6ghqkz", email = "qx6ghqkz@proton.me" }
]
maintainers = [
    { name = "qx6ghqkz", email = "qx6ghqkz@proton.me" }
]
keywords = [
    "image",
    "gallery",
    "video",
    "media",
    "downloader",
    "server",
    "web-ui",
    "self-hosted",
    "gallery-dl",
    "youtube",
    "yt-dlp",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Framework :: FastAPI",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Video",
    "Topic :: Utilities",
]
dependencies = [
    "aiofiles>=24.1.0",
    "gallery_dl>=1.28.1,<2.0.0",
    "jinja2>=3.1.5,<4.0.0",
    "python-multipart>=0.0.20",
    "requests>=2.32.3,<3.0.0",
    "starlette>=0.45.1,<1.0.0",
    "uvicorn>=0.32.0,<1.0.0; (platform_machine != 'x86_64' and platform_machine != 'AMD64') or implementation_name != 'cpython'",
    "uvicorn[standard]>=0.32.0,<1.0.0; (platform_machine == 'x86_64' or platform_machine == 'AMD64') and implementation_name == 'cpython'",
    "watchfiles>=1.0.0,<2.0.0",
    "websockets>=13.1",
    "yt-dlp[default,curl-cffi]>=2025.11.12",
]

[project.optional-dependencies]
full = [
    "brotli>=1.1.0; implementation_name == 'cpython'",
    "brotlicffi>=1.1.0; implementation_name != 'cpython'",
    "pyyaml>=6.0.2",
    "toml>=0.10.2; python_version <= '3.10'",
]
build = [
    "build>=1.2.2",
    "pip>=24.3",
    "pyinstaller>=6.10.0",
    "setuptools>=75.6.0",
    "wheel>=0.45.0",
]
dev = [
    "pre-commit>=4.0.0",
    "ruff>=0.9.0",
]

[project.urls]
Documentation = "https://github.com/qx6ghqkz/gallery-dl-server#readme"
Repository = "https://github.com/qx6ghqkz/gallery-dl-server"
Issues = "https://github.com/qx6ghqkz/gallery-dl-server/issues"
Releases = "https://github.com/qx6ghqkz/gallery-dl-server/releases"
Docker = "https://hub.docker.com/r/qx6ghqkz/gallery-dl-server"

[project.scripts]
gallery-dl-server = "gallery_dl_server.app:main"

[tool.setuptools]
packages = ["gallery_dl_server"]
include-package-data = true

[tool.ruff]
line-length = 100
indent-width = 4
target-version = "py310"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
